--- a/analysis-complete-case/analysis-H2.html
+++ b/analysis-complete-case/analysis-H2.html
@@ -653,13 +653,14 @@ day in study is modeled in a linear or quadratic manner.</p>
 (Linear Effect of Time)</h1>
 <table>
 <colgroup>
-<col width="48%" />
+<col width="46%" />
 <col width="10%" />
-<col width="8%" />
+<col width="7%" />
 <col width="6%" />
 <col width="5%" />
 <col width="5%" />
-<col width="10%" />
+<col width="9%" />
+<col width="2%" />
 <col width="5%" />
 </colgroup>
 <thead>
@@ -671,6 +672,7 @@ day in study is modeled in a linear or quadratic manner.</p>
 <th align="right">UCL95</th>
 <th align="right">SE</th>
 <th align="right">HotellingT</th>
+<th align="right">df</th>
 <th align="right">p</th>
 </tr>
 </thead>
@@ -683,6 +685,7 @@ day in study is modeled in a linear or quadratic manner.</p>
 <td align="right">0.509</td>
 <td align="right">0.111</td>
 <td align="right">2.613</td>
+<td align="right">83</td>
 <td align="right">0.011</td>
 </tr>
 <tr class="even">
@@ -694,6 +697,7 @@ Study</td>
 <td align="right">0.014</td>
 <td align="right">0.017</td>
 <td align="right">-1.180</td>
+<td align="right">83</td>
 <td align="right">0.241</td>
 </tr>
 <tr class="odd">
@@ -704,6 +708,7 @@ Study</td>
 <td align="right">0.272</td>
 <td align="right">0.109</td>
 <td align="right">0.517</td>
+<td align="right">83</td>
 <td align="right">0.606</td>
 </tr>
 <tr class="even">
@@ -715,19 +720,21 @@ Study</td>
 <td align="right">0.031</td>
 <td align="right">0.019</td>
 <td align="right">-0.375</td>
+<td align="right">83</td>
 <td align="right">0.708</td>
 </tr>
 </tbody>
 </table>
 <table style="width:100%;">
 <colgroup>
-<col width="37%" />
+<col width="36%" />
 <col width="12%" />
 <col width="9%" />
 <col width="7%" />
 <col width="7%" />
 <col width="6%" />
 <col width="11%" />
+<col width="3%" />
 <col width="6%" />
 </colgroup>
 <thead>
@@ -739,6 +746,7 @@ Study</td>
 <th align="right">UCL95</th>
 <th align="right">SE</th>
 <th align="right">HotellingT</th>
+<th align="right">df</th>
 <th align="right">p</th>
 </tr>
 </thead>
@@ -751,6 +759,7 @@ Study</td>
 <td align="right">0.147</td>
 <td align="right">0.291</td>
 <td align="right">-1.486</td>
+<td align="right">83</td>
 <td align="right">0.141</td>
 </tr>
 <tr class="even">
@@ -761,6 +770,7 @@ Study</td>
 <td align="right">0.009</td>
 <td align="right">0.004</td>
 <td align="right">0.442</td>
+<td align="right">83</td>
 <td align="right">0.659</td>
 </tr>
 <tr class="odd">
@@ -771,6 +781,7 @@ Study</td>
 <td align="right">0.419</td>
 <td align="right">0.142</td>
 <td align="right">0.972</td>
+<td align="right">83</td>
 <td align="right">0.334</td>
 </tr>
 <tr class="even">
@@ -781,6 +792,7 @@ Study</td>
 <td align="right">0.492</td>
 <td align="right">0.142</td>
 <td align="right">1.484</td>
+<td align="right">83</td>
 <td align="right">0.142</td>
 </tr>
 <tr class="odd">
@@ -791,6 +803,7 @@ Study</td>
 <td align="right">0.408</td>
 <td align="right">0.135</td>
 <td align="right">1.030</td>
+<td align="right">83</td>
 <td align="right">0.306</td>
 </tr>
 <tr class="even">
@@ -801,6 +814,7 @@ Study</td>
 <td align="right">0.502</td>
 <td align="right">0.184</td>
 <td align="right">0.733</td>
+<td align="right">83</td>
 <td align="right">0.466</td>
 </tr>
 <tr class="odd">
@@ -811,6 +825,7 @@ Study</td>
 <td align="right">0.014</td>
 <td align="right">0.007</td>
 <td align="right">0.091</td>
+<td align="right">83</td>
 <td align="right">0.928</td>
 </tr>
 <tr class="even">
@@ -821,6 +836,7 @@ Study</td>
 <td align="right">0.211</td>
 <td align="right">0.105</td>
 <td align="right">0.027</td>
+<td align="right">83</td>
 <td align="right">0.979</td>
 </tr>
 <tr class="odd">
@@ -831,6 +847,7 @@ Study</td>
 <td align="right">0.027</td>
 <td align="right">0.016</td>
 <td align="right">-0.277</td>
+<td align="right">83</td>
 <td align="right">0.782</td>
 </tr>
 <tr class="even">
@@ -841,6 +858,7 @@ Study</td>
 <td align="right">0.010</td>
 <td align="right">0.005</td>
 <td align="right">-0.010</td>
+<td align="right">83</td>
 <td align="right">0.992</td>
 </tr>
 <tr class="odd">
@@ -851,6 +869,7 @@ Study</td>
 <td align="right">0.035</td>
 <td align="right">0.011</td>
 <td align="right">1.077</td>
+<td align="right">83</td>
 <td align="right">0.284</td>
 </tr>
 <tr class="even">
@@ -861,6 +880,7 @@ Study</td>
 <td align="right">0.164</td>
 <td align="right">0.067</td>
 <td align="right">0.447</td>
+<td align="right">83</td>
 <td align="right">0.656</td>
 </tr>
 <tr class="odd">
@@ -871,6 +891,7 @@ Study</td>
 <td align="right">-0.737</td>
 <td align="right">0.177</td>
 <td align="right">-6.166</td>
+<td align="right">83</td>
 <td align="right">0.000</td>
 </tr>
 <tr class="even">
@@ -881,6 +902,7 @@ Study</td>
 <td align="right">1.132</td>
 <td align="right">0.130</td>
 <td align="right">6.694</td>
+<td align="right">83</td>
 <td align="right">0.000</td>
 </tr>
 </tbody>
@@ -891,13 +913,14 @@ Study</td>
 (Quadratic Effect of Time)</h1>
 <table>
 <colgroup>
-<col width="54%" />
+<col width="53%" />
 <col width="9%" />
 <col width="7%" />
 <col width="5%" />
 <col width="4%" />
 <col width="4%" />
 <col width="8%" />
+<col width="2%" />
 <col width="4%" />
 </colgroup>
 <thead>
@@ -909,6 +932,7 @@ Study</td>
 <th align="right">UCL95</th>
 <th align="right">SE</th>
 <th align="right">HotellingT</th>
+<th align="right">df</th>
 <th align="right">p</th>
 </tr>
 </thead>
@@ -921,6 +945,7 @@ Study</td>
 <td align="right">0.939</td>
 <td align="right">0.229</td>
 <td align="right">2.115</td>
+<td align="right">81</td>
 <td align="right">0.038</td>
 </tr>
 <tr class="even">
@@ -932,6 +957,7 @@ Study</td>
 <td align="right">0.071</td>
 <td align="right">0.095</td>
 <td align="right">-1.240</td>
+<td align="right">81</td>
 <td align="right">0.219</td>
 </tr>
 <tr class="odd">
@@ -943,6 +969,7 @@ Day in Study</td>
 <td align="right">0.027</td>
 <td align="right">0.009</td>
 <td align="right">1.072</td>
+<td align="right">81</td>
 <td align="right">0.287</td>
 </tr>
 <tr class="even">
@@ -953,6 +980,7 @@ Day in Study</td>
 <td align="right">0.623</td>
 <td align="right">0.274</td>
 <td align="right">0.281</td>
+<td align="right">81</td>
 <td align="right">0.779</td>
 </tr>
 <tr class="odd">
@@ -964,6 +992,7 @@ Study</td>
 <td align="right">0.220</td>
 <td align="right">0.120</td>
 <td align="right">-0.148</td>
+<td align="right">81</td>
 <td align="right">0.882</td>
 </tr>
 <tr class="even">
@@ -975,19 +1004,21 @@ Day in Study</td>
 <td align="right">0.023</td>
 <td align="right">0.011</td>
 <td align="right">0.098</td>
+<td align="right">81</td>
 <td align="right">0.922</td>
 </tr>
 </tbody>
 </table>
 <table>
 <colgroup>
-<col width="42%" />
+<col width="41%" />
 <col width="11%" />
 <col width="8%" />
 <col width="6%" />
 <col width="6%" />
 <col width="5%" />
 <col width="10%" />
+<col width="2%" />
 <col width="5%" />
 </colgroup>
 <thead>
@@ -999,6 +1030,7 @@ Day in Study</td>
 <th align="right">UCL95</th>
 <th align="right">SE</th>
 <th align="right">HotellingT</th>
+<th align="right">df</th>
 <th align="right">p</th>
 </tr>
 </thead>
@@ -1011,6 +1043,7 @@ Day in Study</td>
 <td align="right">0.099</td>
 <td align="right">0.319</td>
 <td align="right">-1.680</td>
+<td align="right">81</td>
 <td align="right">0.097</td>
 </tr>
 <tr class="even">
@@ -1021,6 +1054,7 @@ Day in Study</td>
 <td align="right">0.009</td>
 <td align="right">0.004</td>
 <td align="right">0.482</td>
+<td align="right">81</td>
 <td align="right">0.631</td>
 </tr>
 <tr class="odd">
@@ -1031,6 +1065,7 @@ Day in Study</td>
 <td align="right">0.419</td>
 <td align="right">0.142</td>
 <td align="right">0.951</td>
+<td align="right">81</td>
 <td align="right">0.345</td>
 </tr>
 <tr class="even">
@@ -1041,6 +1076,7 @@ Day in Study</td>
 <td align="right">0.493</td>
 <td align="right">0.142</td>
 <td align="right">1.478</td>
+<td align="right">81</td>
 <td align="right">0.143</td>
 </tr>
 <tr class="odd">
@@ -1051,6 +1087,7 @@ Day in Study</td>
 <td align="right">0.406</td>
 <td align="right">0.135</td>
 <td align="right">1.013</td>
+<td align="right">81</td>
 <td align="right">0.314</td>
 </tr>
 <tr class="even">
@@ -1061,6 +1098,7 @@ Day in Study</td>
 <td align="right">0.503</td>
 <td align="right">0.186</td>
 <td align="right">0.718</td>
+<td align="right">81</td>
 <td align="right">0.475</td>
 </tr>
 <tr class="odd">
@@ -1071,6 +1109,7 @@ Day in Study</td>
 <td align="right">0.014</td>
 <td align="right">0.007</td>
 <td align="right">0.075</td>
+<td align="right">81</td>
 <td align="right">0.941</td>
 </tr>
 <tr class="even">
@@ -1081,6 +1120,7 @@ Day in Study</td>
 <td align="right">0.212</td>
 <td align="right">0.105</td>
 <td align="right">0.023</td>
+<td align="right">81</td>
 <td align="right">0.982</td>
 </tr>
 <tr class="odd">
@@ -1091,6 +1131,7 @@ Day in Study</td>
 <td align="right">0.028</td>
 <td align="right">0.016</td>
 <td align="right">-0.257</td>
+<td align="right">81</td>
 <td align="right">0.798</td>
 </tr>
 <tr class="even">
@@ -1101,6 +1142,7 @@ Day in Study</td>
 <td align="right">0.009</td>
 <td align="right">0.005</td>
 <td align="right">-0.125</td>
+<td align="right">81</td>
 <td align="right">0.901</td>
 </tr>
 <tr class="odd">
@@ -1111,6 +1153,7 @@ Day in Study</td>
 <td align="right">0.216</td>
 <td align="right">0.061</td>
 <td align="right">1.529</td>
+<td align="right">81</td>
 <td align="right">0.130</td>
 </tr>
 <tr class="even">
@@ -1121,6 +1164,7 @@ Day in Study</td>
 <td align="right">0.165</td>
 <td align="right">0.068</td>
 <td align="right">0.454</td>
+<td align="right">81</td>
 <td align="right">0.651</td>
 </tr>
 <tr class="odd">
@@ -1131,6 +1175,7 @@ Day in Study</td>
 <td align="right">-0.777</td>
 <td align="right">0.183</td>
 <td align="right">-6.224</td>
+<td align="right">81</td>
 <td align="right">0.000</td>
 </tr>
 <tr class="even">
@@ -1141,6 +1186,7 @@ Day in Study</td>
 <td align="right">1.126</td>
 <td align="right">0.130</td>
 <td align="right">6.662</td>
+<td align="right">81</td>
 <td align="right">0.000</td>
 </tr>
 <tr class="odd">
@@ -1151,6 +1197,7 @@ Day in Study</td>
 <td align="right">0.004</td>
 <td align="right">0.006</td>
 <td align="right">-1.387</td>
+<td align="right">81</td>
 <td align="right">0.169</td>
 </tr>
 </tbody>
@@ -1161,13 +1208,14 @@ Day in Study</td>
 Analysis</h1>
 <table>
 <colgroup>
-<col width="40%" />
+<col width="39%" />
 <col width="12%" />
 <col width="9%" />
 <col width="7%" />
 <col width="6%" />
 <col width="6%" />
 <col width="11%" />
+<col width="3%" />
 <col width="6%" />
 </colgroup>
 <thead>
@@ -1179,6 +1227,7 @@ Analysis</h1>
 <th align="right">UCL95</th>
 <th align="right">SE</th>
 <th align="right">HotellingT</th>
+<th align="right">df</th>
 <th align="right">p</th>
 </tr>
 </thead>
@@ -1191,6 +1240,7 @@ Analysis</h1>
 <td align="right">0.342</td>
 <td align="right">0.058</td>
 <td align="right">3.893</td>
+<td align="right">84</td>
 <td align="right">0.000</td>
 </tr>
 <tr class="even">
@@ -1201,6 +1251,7 @@ Analysis</h1>
 <td align="right">0.154</td>
 <td align="right">0.049</td>
 <td align="right">1.131</td>
+<td align="right">84</td>
 <td align="right">0.261</td>
 </tr>
 </tbody>
@@ -1241,13 +1292,14 @@ Analysis</h1>
 </table>
 <table style="width:100%;">
 <colgroup>
-<col width="37%" />
+<col width="36%" />
 <col width="12%" />
 <col width="9%" />
 <col width="7%" />
 <col width="7%" />
 <col width="6%" />
 <col width="11%" />
+<col width="3%" />
 <col width="6%" />
 </colgroup>
 <thead>
@@ -1259,6 +1311,7 @@ Analysis</h1>
 <th align="right">UCL95</th>
 <th align="right">SE</th>
 <th align="right">HotellingT</th>
+<th align="right">df</th>
 <th align="right">p</th>
 </tr>
 </thead>
@@ -1271,6 +1324,7 @@ Analysis</h1>
 <td align="right">-0.210</td>
 <td align="right">0.298</td>
 <td align="right">-2.692</td>
+<td align="right">84</td>
 <td align="right">0.009</td>
 </tr>
 <tr class="even">
@@ -1281,6 +1335,7 @@ Analysis</h1>
 <td align="right">0.008</td>
 <td align="right">0.004</td>
 <td align="right">0.413</td>
+<td align="right">84</td>
 <td align="right">0.680</td>
 </tr>
 <tr class="odd">
@@ -1291,6 +1346,7 @@ Analysis</h1>
 <td align="right">0.401</td>
 <td align="right">0.139</td>
 <td align="right">0.888</td>
+<td align="right">84</td>
 <td align="right">0.377</td>
 </tr>
 <tr class="even">
@@ -1301,6 +1357,7 @@ Analysis</h1>
 <td align="right">0.484</td>
 <td align="right">0.143</td>
 <td align="right">1.392</td>
+<td align="right">84</td>
 <td align="right">0.168</td>
 </tr>
 <tr class="odd">
@@ -1311,6 +1368,7 @@ Analysis</h1>
 <td align="right">0.400</td>
 <td align="right">0.134</td>
 <td align="right">0.992</td>
+<td align="right">84</td>
 <td align="right">0.324</td>
 </tr>
 <tr class="even">
@@ -1321,6 +1379,7 @@ Analysis</h1>
 <td align="right">0.508</td>
 <td align="right">0.184</td>
 <td align="right">0.774</td>
+<td align="right">84</td>
 <td align="right">0.441</td>
 </tr>
 <tr class="odd">
@@ -1331,6 +1390,7 @@ Analysis</h1>
 <td align="right">0.014</td>
 <td align="right">0.007</td>
 <td align="right">0.021</td>
+<td align="right">84</td>
 <td align="right">0.983</td>
 </tr>
 <tr class="even">
@@ -1341,6 +1401,7 @@ Analysis</h1>
 <td align="right">0.214</td>
 <td align="right">0.106</td>
 <td align="right">0.028</td>
+<td align="right">84</td>
 <td align="right">0.978</td>
 </tr>
 <tr class="odd">
@@ -1351,6 +1412,7 @@ Analysis</h1>
 <td align="right">0.025</td>
 <td align="right">0.016</td>
 <td align="right">-0.375</td>
+<td align="right">84</td>
 <td align="right">0.708</td>
 </tr>
 <tr class="even">
@@ -1361,6 +1423,7 @@ Analysis</h1>
 <td align="right">0.010</td>
 <td align="right">0.005</td>
 <td align="right">0.005</td>
+<td align="right">84</td>
 <td align="right">0.996</td>
 </tr>
 <tr class="odd">
@@ -1371,6 +1434,7 @@ Analysis</h1>
 <td align="right">0.019</td>
 <td align="right">0.007</td>
 <td align="right">0.792</td>
+<td align="right">84</td>
 <td align="right">0.430</td>
 </tr>
 <tr class="even">
@@ -1381,6 +1445,7 @@ Analysis</h1>
 <td align="right">0.164</td>
 <td align="right">0.063</td>
 <td align="right">0.594</td>
+<td align="right">84</td>
 <td align="right">0.554</td>
 </tr>
 <tr class="odd">
@@ -1391,6 +1456,7 @@ Analysis</h1>
 <td align="right">-0.363</td>
 <td align="right">0.169</td>
 <td align="right">-4.142</td>
+<td align="right">84</td>
 <td align="right">0.000</td>
 </tr>
 <tr class="even">
@@ -1401,6 +1467,7 @@ Analysis</h1>
 <td align="right">1.135</td>
 <td align="right">0.125</td>
 <td align="right">7.091</td>
+<td align="right">84</td>
 <td align="right">0.000</td>
 </tr>
 </tbody>
