--- a/analysis-complete-case/analysis-H3-app-usage-moderators.html
+++ b/analysis-complete-case/analysis-H3-app-usage-moderators.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2024-03-08" />
+<meta name="date" content="2024-03-15" />
 
 <title>MARS MRT: H3 - App Usage</title>
 
@@ -350,7 +350,7 @@ display: none;
 
 
 <h1 class="title toc-ignore">MARS MRT: H3 - App Usage</h1>
-<h4 class="date">March 08, 2024</h4>
+<h4 class="date">March 15, 2024</h4>
 
 </div>
 
@@ -363,12 +363,36 @@ brief survey between prior micro-randomization to current
 micro-randomization</a></li>
 <li><a href="#any-tracked-app-usage-or-self-reported-engagement-in-self-regulatory-strategies-between-prior-micro-randomization-to-current-micro-randomization" id="toc-any-tracked-app-usage-or-self-reported-engagement-in-self-regulatory-strategies-between-prior-micro-randomization-to-current-micro-randomization"><span class="toc-section-number">3</span> Any tracked app usage or
 self-reported engagement in self-regulatory strategies between prior
-micro-randomization to current micro-randomization</a></li>
+micro-randomization to current micro-randomization</a>
+<ul>
+<li><a href="#confidence-intervals" id="toc-confidence-intervals"><span class="toc-section-number">3.1</span> 95% Confidence Intervals</a></li>
+<li><a href="#confidence-intervals-1" id="toc-confidence-intervals-1"><span class="toc-section-number">3.2</span> 90% Confidence Intervals</a></li>
+<li><a href="#estimated-effect-on-the-risk-ratio-scale" id="toc-estimated-effect-on-the-risk-ratio-scale"><span class="toc-section-number">3.3</span> Estimated effect on the risk ratio
+scale</a>
+<ul>
+<li><a href="#confidence-intervals-2" id="toc-confidence-intervals-2"><span class="toc-section-number">3.3.1</span> 95% Confidence
+Intervals</a></li>
+<li><a href="#confidence-intervals-3" id="toc-confidence-intervals-3"><span class="toc-section-number">3.3.2</span> 90% Confidence
+Intervals</a></li>
+</ul></li>
+</ul></li>
 <li><a href="#any-response-to-brief-survey-between-prior-micro-randomization-to-current-micro-randomization" id="toc-any-response-to-brief-survey-between-prior-micro-randomization-to-current-micro-randomization"><span class="toc-section-number">4</span> Any response to brief survey between
 prior micro-randomization to current micro-randomization</a></li>
 <li><a href="#self-reported-engagement-in-self-regulatory-strategies-between-prior-micro-randomization-to-current-micro-randomization" id="toc-self-reported-engagement-in-self-regulatory-strategies-between-prior-micro-randomization-to-current-micro-randomization"><span class="toc-section-number">5</span> Self-reported engagement in
 self-regulatory strategies between prior micro-randomization to current
-micro-randomization</a></li>
+micro-randomization</a>
+<ul>
+<li><a href="#confidence-intervals-4" id="toc-confidence-intervals-4"><span class="toc-section-number">5.1</span> 95% Confidence Intervals</a></li>
+<li><a href="#confidence-intervals-5" id="toc-confidence-intervals-5"><span class="toc-section-number">5.2</span> 90% Confidence Intervals</a></li>
+<li><a href="#estimated-effect-on-the-risk-ratio-scale-1" id="toc-estimated-effect-on-the-risk-ratio-scale-1"><span class="toc-section-number">5.3</span> Estimated effect on the risk ratio
+scale</a>
+<ul>
+<li><a href="#confidence-intervals-6" id="toc-confidence-intervals-6"><span class="toc-section-number">5.3.1</span> 95% Confidence
+Intervals</a></li>
+<li><a href="#confidence-intervals-7" id="toc-confidence-intervals-7"><span class="toc-section-number">5.3.2</span> 90% Confidence
+Intervals</a></li>
+</ul></li>
+</ul></li>
 </ul>
 </div>
 
@@ -458,6 +482,9 @@ or self-reported engagement in self-regulatory strategies between prior
 micro-randomization to current micro-randomization</h1>
 <pre><code>##   n_participants_elig n_participants_included_among_elig n_participants_excluded_among_elig n_elig n_included_among_elig n_excluded_among_elig
 ## 1                  99                                 90                                  9   3638                  1664                  1974</code></pre>
+<div id="confidence-intervals" class="section level2" number="3.1">
+<h2><span class="header-section-number">3.1</span> 95% Confidence
+Intervals</h2>
 <pre><code>## $call
 ## emee(data = dat_for_analysis, id = &quot;participant_id&quot;, outcome = &quot;Y&quot;, 
 ##     treatment = &quot;coinflip&quot;, rand_prob = 0.5, moderator_formula = ~any_app_usage_and_ema_preblock, 
@@ -468,9 +495,10 @@ micro-randomization to current micro-randomization</h1>
 ##         any_response_2qs + engagement_most_recent_eligible, availability = &quot;overall_eligibility&quot;)
 ## 
 ## $causal_excursion_effect
-##                                  Estimate     95% LCL   95% UCL    StdErr   t_value df    p-value
-## (Intercept)                     0.4528801  0.04468503 0.8610752 0.2048613  2.210667 74 0.03014949
-## any_app_usage_and_ema_preblock -0.3883666 -0.79925533 0.0225222 0.2062132 -1.883325 74 0.06358584
+##                                                 Estimate     95% LCL   95% UCL     StdErr   t_value df    p-value
+## (Intercept)                                   0.45288013  0.04468503 0.8610752 0.20486132  2.210667 74 0.03014949
+## any_app_usage_and_ema_preblock               -0.38836657 -0.79925533 0.0225222 0.20621320 -1.883325 74 0.06358584
+## (Intercept) + any_app_usage_and_ema_preblock  0.06451356 -0.01460129 0.1436284 0.03970546  1.624803 74 0.10845651
 ## 
 ## $control_variables
 ##                                         Estimate      95% LCL      95% UCL      StdErr    t_value df      p-value
@@ -488,6 +516,60 @@ micro-randomization to current micro-randomization</h1>
 ## days_between_v1_and_coinflip_local  0.0073178503 -0.008029872  0.022665573 0.007702579  0.9500520 74 3.451784e-01
 ## any_response_2qs                    0.0288211687 -0.104632974  0.162275312 0.066976778  0.4303158 74 6.682166e-01
 ## engagement_most_recent_eligible     0.5986652429  0.353400226  0.843930259 0.123091424  4.8635821 74 6.314695e-06</code></pre>
+</div>
+<div id="confidence-intervals-1" class="section level2" number="3.2">
+<h2><span class="header-section-number">3.2</span> 90% Confidence
+Intervals</h2>
+<pre><code>## $call
+## emee(data = dat_for_analysis, id = &quot;participant_id&quot;, outcome = &quot;Y&quot;, 
+##     treatment = &quot;coinflip&quot;, rand_prob = 0.5, moderator_formula = ~any_app_usage_and_ema_preblock, 
+##     control_formula = ~any_app_usage_and_ema_preblock + age + 
+##         is_male + is_latino + is_not_latino_and_black + is_not_latino_and_other + 
+##         baseline_tobacco_history + has_partner + income_val + 
+##         hour_coinflip_local + days_between_v1_and_coinflip_local + 
+##         any_response_2qs + engagement_most_recent_eligible, availability = &quot;overall_eligibility&quot;)
+## 
+## $causal_excursion_effect
+##                                                 Estimate      90% LCL     90% UCL     StdErr   t_value df    p-value
+## (Intercept)                                   0.45288013  0.111641209  0.79411904 0.20486132  2.210667 74 0.03014949
+## any_app_usage_and_ema_preblock               -0.38836657 -0.731857313 -0.04487582 0.20621320 -1.883325 74 0.06358584
+## (Intercept) + any_app_usage_and_ema_preblock  0.06451356 -0.001624096  0.13065121 0.03970546  1.624803 74 0.10845651
+## 
+## $control_variables
+##                                         Estimate      90% LCL      90% UCL      StdErr    t_value df      p-value
+## (Intercept)                        -1.7589901687 -2.269370698 -1.248609639 0.306404765 -5.7407403 74 1.951825e-07
+## any_app_usage_and_ema_preblock      0.6504754831  0.346597130  0.954353837 0.182432068  3.5655764 74 6.405786e-04
+## age                                 0.0015628955 -0.004127985  0.007253776 0.003416496  0.4574557 74 6.486838e-01
+## is_male                            -0.1253321527 -0.361407331  0.110743025 0.141726722 -0.8843227 74 3.793863e-01
+## is_latino                           0.2140170255 -0.026797276  0.454831327 0.144571834  1.4803508 74 1.430248e-01
+## is_not_latino_and_black             0.1350574408 -0.092075996  0.362190878 0.136358586  0.9904579 74 3.251780e-01
+## is_not_latino_and_other             0.1318125484 -0.176287571  0.439912668 0.184966587  0.7126290 74 4.783164e-01
+## baseline_tobacco_history            0.0007255594 -0.009943956  0.011395075 0.006405398  0.1132731 74 9.101208e-01
+## has_partner                         0.0171808254 -0.157801194  0.192162844 0.105049706  0.1635495 74 8.705317e-01
+## income_val                         -0.0043476382 -0.031130334  0.022435057 0.016078877 -0.2703944 74 7.876096e-01
+## hour_coinflip_local                 0.0026576585 -0.005857196  0.011172513 0.005111856  0.5199009 74 6.046845e-01
+## days_between_v1_and_coinflip_local  0.0073178503 -0.005512388  0.020148089 0.007702579  0.9500520 74 3.451784e-01
+## any_response_2qs                    0.0288211687 -0.082742512  0.140384849 0.066976778  0.4303158 74 6.682166e-01
+## engagement_most_recent_eligible     0.5986652429  0.393631009  0.803699476 0.123091424  4.8635821 74 6.314695e-06</code></pre>
+</div>
+<div id="estimated-effect-on-the-risk-ratio-scale" class="section level2" number="3.3">
+<h2><span class="header-section-number">3.3</span> Estimated effect on
+the risk ratio scale</h2>
+<div id="confidence-intervals-2" class="section level3" number="3.3.1">
+<h3><span class="header-section-number">3.3.1</span> 95% Confidence
+Intervals</h3>
+<pre><code>##                                              exp_estimates    rrLB95   rrUB95
+## (Intercept)                                       1.572836 1.0456984 2.365703
+## (Intercept) + any_app_usage_and_ema_preblock      1.066640 0.9855048 1.154455</code></pre>
+</div>
+<div id="confidence-intervals-3" class="section level3" number="3.3.2">
+<h3><span class="header-section-number">3.3.2</span> 90% Confidence
+Intervals</h3>
+<pre><code>##                                              exp_estimates      rrLB     rrUB
+## (Intercept)                                       1.572836 1.1181116 2.212491
+## (Intercept) + any_app_usage_and_ema_preblock      1.066640 0.9983772 1.139570</code></pre>
+</div>
+</div>
 </div>
 <div id="any-response-to-brief-survey-between-prior-micro-randomization-to-current-micro-randomization" class="section level1" number="4">
 <h1><span class="header-section-number">4</span> Any response to brief
@@ -530,6 +612,9 @@ engagement in self-regulatory strategies between prior
 micro-randomization to current micro-randomization</h1>
 <pre><code>##   n_participants_elig n_participants_included_among_elig n_participants_excluded_among_elig n_elig n_included_among_elig n_excluded_among_elig
 ## 1                  99                                 90                                  9   3638                  1664                  1974</code></pre>
+<div id="confidence-intervals-4" class="section level2" number="5.1">
+<h2><span class="header-section-number">5.1</span> 95% Confidence
+Intervals</h2>
 <pre><code>## $call
 ## emee(data = dat_for_analysis, id = &quot;participant_id&quot;, outcome = &quot;Y&quot;, 
 ##     treatment = &quot;coinflip&quot;, rand_prob = 0.5, moderator_formula = ~engagement_most_recent_eligible, 
@@ -539,10 +624,10 @@ micro-randomization to current micro-randomization</h1>
 ##         any_response_2qs + engagement_most_recent_eligible, availability = &quot;overall_eligibility&quot;)
 ## 
 ## $causal_excursion_effect
-##                                   Estimate     95% LCL    95% UCL    StdErr   t_value df    p-value
-## (Intercept)                      0.3482515  0.03851279 0.65799022 0.1554833  2.239799 75 0.02806688
-## engagement_most_recent_eligible -0.3001104 -0.61388417 0.01366336 0.1575089 -1.905356 75 0.06056704
-## engagement_most_recent_eligible -0.3001104 -0.61388417 0.01366336 0.1575089 -1.905356 75 0.06056704
+##                                                 Estimate     95% LCL    95% UCL     StdErr   t_value df    p-value
+## (Intercept)                                    0.3482515  0.03851279 0.65799022 0.15548335  2.239799 75 0.02806688
+## engagement_most_recent_eligible               -0.3001104 -0.61388417 0.01366336 0.15750887 -1.905356 75 0.06056704
+## (Intercept) + engagement_most_recent_eligible  0.0481411 -0.02875288 0.12503508 0.03859942  1.247198 75 0.21620569
 ## 
 ## $control_variables
 ##                                         Estimate      95% LCL      95% UCL      StdErr     t_value df      p-value
@@ -559,6 +644,58 @@ micro-randomization to current micro-randomization</h1>
 ## days_between_v1_and_coinflip_local  0.0068505486 -0.008286317  0.021987414 0.007598438  0.90157324 75 3.701698e-01
 ## any_response_2qs                    0.0327140311 -0.102016394  0.167444456 0.067632287  0.48370434 75 6.300050e-01
 ## engagement_most_recent_eligible     1.0304564143  0.681646857  1.379265972 0.175096220  5.88508657 75 1.043571e-07</code></pre>
+</div>
+<div id="confidence-intervals-5" class="section level2" number="5.2">
+<h2><span class="header-section-number">5.2</span> 90% Confidence
+Intervals</h2>
+<pre><code>## $call
+## emee(data = dat_for_analysis, id = &quot;participant_id&quot;, outcome = &quot;Y&quot;, 
+##     treatment = &quot;coinflip&quot;, rand_prob = 0.5, moderator_formula = ~engagement_most_recent_eligible, 
+##     control_formula = ~age + is_male + is_latino + is_not_latino_and_black + 
+##         is_not_latino_and_other + baseline_tobacco_history + 
+##         has_partner + income_val + hour_coinflip_local + days_between_v1_and_coinflip_local + 
+##         any_response_2qs + engagement_most_recent_eligible, availability = &quot;overall_eligibility&quot;)
+## 
+## $causal_excursion_effect
+##                                                 Estimate     90% LCL     90% UCL     StdErr   t_value df    p-value
+## (Intercept)                                    0.3482515  0.08930559  0.60719742 0.15548335  2.239799 75 0.02806688
+## engagement_most_recent_eligible               -0.3001104 -0.56242968 -0.03779113 0.15750887 -1.905356 75 0.06056704
+## (Intercept) + engagement_most_recent_eligible  0.0481411 -0.01614335  0.11242555 0.03859942  1.247198 75 0.21620569
+## 
+## $control_variables
+##                                         Estimate      90% LCL      90% UCL      StdErr     t_value df      p-value
+## (Intercept)                        -1.5400939701 -2.031162807 -1.049025133 0.294860907 -5.22312023 75 1.524304e-06
+## age                                 0.0019408024 -0.003899109  0.007780714 0.003506559  0.55347781 75 5.815825e-01
+## is_male                            -0.1361842373 -0.379215284  0.106846809 0.145927311 -0.93323338 75 3.536942e-01
+## is_latino                           0.2122486043 -0.033018064  0.457515273 0.147269684  1.44122401 75 1.536837e-01
+## is_not_latino_and_black             0.1287835162 -0.101195727  0.358762760 0.138090392  0.93260301 75 3.540176e-01
+## is_not_latino_and_other             0.1295359789 -0.181677026  0.440748984 0.186866977  0.69319888 75 4.903259e-01
+## baseline_tobacco_history            0.0005292644 -0.010467401  0.011525930 0.006602917  0.08015615 75 9.363266e-01
+## has_partner                         0.0129089612 -0.164875596  0.190693518 0.106750239  0.12092677 75 9.040724e-01
+## income_val                         -0.0048789976 -0.031817061  0.022059066 0.016174885 -0.30164033 75 7.637611e-01
+## hour_coinflip_local                 0.0027982248 -0.005943495  0.011539945 0.005248941  0.53310272 75 5.955387e-01
+## days_between_v1_and_coinflip_local  0.0068505486 -0.005804083  0.019505181 0.007598438  0.90157324 75 3.701698e-01
+## any_response_2qs                    0.0327140311 -0.079922496  0.145350558 0.067632287  0.48370434 75 6.300050e-01
+## engagement_most_recent_eligible     1.0304564143  0.738846726  1.322066102 0.175096220  5.88508657 75 1.043571e-07</code></pre>
+</div>
+<div id="estimated-effect-on-the-risk-ratio-scale-1" class="section level2" number="5.3">
+<h2><span class="header-section-number">5.3</span> Estimated effect on
+the risk ratio scale</h2>
+<div id="confidence-intervals-6" class="section level3" number="5.3.1">
+<h3><span class="header-section-number">5.3.1</span> 95% Confidence
+Intervals</h3>
+<pre><code>##                                               exp_estimates    rrLB95   rrUB95
+## (Intercept)                                        1.416588 1.0392640 1.930908
+## (Intercept) + engagement_most_recent_eligible      1.049319 0.9716565 1.133188</code></pre>
+</div>
+<div id="confidence-intervals-7" class="section level3" number="5.3.2">
+<h3><span class="header-section-number">5.3.2</span> 90% Confidence
+Intervals</h3>
+<pre><code>##                                               exp_estimates      rrLB     rrUB
+## (Intercept)                                        1.416588 1.0934147 1.835281
+## (Intercept) + engagement_most_recent_eligible      1.049319 0.9839863 1.118989</code></pre>
+</div>
+</div>
 </div>
 
 
